[package]
name = "mpc-signal"
version = "0.1.0"
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13"
actix-web = "4.5" 
actix-web-actors = "4.3"
env_logger = "0.11"
log = "0.4"
prost = "0.12"
prost-types = { version = "0.12", optional = true }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
uuid = { version = "1.8", features = ["v4", "serde"] }

[build-dependencies]
prost-build = "0.12"
